2003-12-23  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/client.py: if Host header is passed, use that
	instead of extracting from request URL.

2003-12-14  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: Frederico Di Gregorio's patch
	adding a psycopg test case.

2003-12-09  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1, based on rc4.

2003-12-06  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/wxreactor.py: Added experimental wxPython reactor,
	which seems to work better than the twisted.internet.wxsupport.

2003-12-05  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/filetransfer.py, session.py: added SFTPv3 support
	to the Conch server.

2003-12-04  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc4, based on rc2. rc3 never happened!

2003-12-04  Brian Warner  <warner@lothar.com>

	* twisted/persisted/sob.py (Persistent): fix misspelled class name,
	add compatibility binding to "Persistant" (sic).

	* twisted/test/test_sob.py: use Persistent
	* twisted/application/service.py (Application): use Persistent

2003-12-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Added support for the
	IDLE command (RFC 2177).

2003-12-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/log.py: Added exception handling to
	log publishing code.  Observers which raise exceptions
	will now be removed from the observer list.

2003-12-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc3.

2003-12-01  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc2 (from CVS HEAD).

2003-12-01  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/runtime.py: Added seconds method to Platform
	class.

	* twisted/internet/base.py, twisted/internet/task.py: Changed
	use of time.time() to use Platform.seconds() instead.
